<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="download_notification_channel_id" translatable="false">download_channel</string>
    <string name="download_notification_channel_name" translatable="true">Download</string>

    <string name="button_name">Click me</string>
    <string name="button_download">Download</string>
    <string name="button_loading">We are loading </string>


    <string name="title_activity_detail">DetailActivity</string>
    <string name="main_screen_name">LoadApp</string>
    <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_text">LoadApp - Current Repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="file_name">File name : </string>
    <string name="status">Status : </string>
    <string name="ok">ok</string>
</resources>
