<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:textSize="@dimen/_16ssp"
        android:text="click on shape"
        app:layout_constraintBottom_toTopOf="@+id/motionLayout"
        tools:layout_editor_absoluteX="21dp" />
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutDescription="@xml/scene_01"
        app:layout_constraintBottom_toTopOf="@+id/bb"
        app:layout_constraintTop_toBottomOf="@+id/status"
        tools:layout_editor_absoluteX="21dp"
        tools:showPaths="true">

        <ImageView
            android:id="@+id/button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_assistant_black_24dp"

            />

    </androidx.constraintlayout.motion.widget.MotionLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/file_name"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/glide_text" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="@+id/file_name"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:text="success" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="@string/status"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/bb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goToHome"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>